cfn_benchmark/cfn_templates/Tianyi2__IRIS/data/cloudformation_collected_templates_new/template_25553_positive1.yaml
Resources:
# IPv4 Rules
  Positive1IPv4_1:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Allow http to client host
        VpcId:
          Ref: myVPC
        SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  Positive1IPv4_2:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Allow http to client host
        VpcId:
          Ref: myVPC
        SecurityGroupIngress:
        - IpProtocol: "-1"
          FromPort: 10
          ToPort: 10
          CidrIp: 0.0.0.0/0

  Positive1ArrayTestIPv4:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Allow http to client host
        VpcId:
          Ref: myVPC
        SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: 0
          ToPort: 1000
          CidrIp: 192.0.0.0/16
        - IpProtocol: "6"
          FromPort: 0
          ToPort: 100
          CidrIp: 0.0.0.0/0

# IPv6 Rules
  Positive1IPv6_1:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to client host
      VpcId:
        Ref: myVPC
      SecurityGroupIngress:
      - IpProtocol: "tcp"
        FromPort: 80
        ToPort: 80
        CidrIpv6: "::/0"

  Positive1IPv6_2:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to client host
      VpcId:
        Ref: myVPC
      SecurityGroupIngress:
      - IpProtocol: "-1"
        FromPort: 10
        ToPort: 10
        CidrIpv6: "::/0"

  Positive1ArrayTestIPv6:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupDescription: Allow http to client host
        VpcId:
          Ref: myVPC
        SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: 0
          ToPort: 1000
          CidrIpv6: "2400:cb00::/32"  #should not flag - used to test array index search
        - IpProtocol: "6"
          FromPort: 70
          ToPort: 90
          CidrIpv6: "0000:0000:0000:0000:0000:0000:0000:0000/0"
